02/12/2003 Bob Rossi <bob_rossi@cox.net>
   
   * Fixed cgdb to interface with new tgdb

02/11/2003 Bob Rossi <bob_rossi@cox.net>
   
   * Added the command to goto a line in the source window: This options was
   present before but it was not picked up by the new command parser.
   * Changed searching keys: the 'n' key to mean 'next forward search' 
   and the 'N' key to mean 'next reverse search'.
   * Changed file buffer key commands: 'b' goes back a file. 'f' goes
   forward a file.
   * Removed the '.' command: It is useless :)

02/05/2003 Peter Kovacs <peter@kovax.org>

    * Integrated new command parser: commands.c now takes care of processing
    all :commands and all :set commands.  Added new commands :insert :next
    :run :continue :macro_run :macro_save :macro_start.  Added verbose set
    commands :set ignorecase and :set shortcut.

version 0.2.3 (01/30/2003):

01/29/2003  Bob Rossi  <bob_rossi@cox.net>

    * Fixed the resize problem on solaris by not calling signal:
    cgdb no longer calls the signal function to say that it wants to
    catch a signal. It now uses the POSIX signal handler functions instead.
    This fixed the resizing issue on solaris.

01/25/2003  Bob Rossi  <bob_rossi@cox.net>

    * removed h key, it is depricated: :help should be used instead.
    * removed ^k, it is depricated: :q and :q! should be used instead.

01/24/2003  Mike Mueller  <mmueller@cs.uri.edu>

    * Added quit command: Added :q and :q! commands.
    * Fixed 'current line' discrepancy: Using the :123 line format, the
    'G', and the 'gg' commands, actually altered the current executing line
    pointer in the interface.  Fixed this so that the user-selected line is
    changed, but the current executing line remains unchanged.
    * Changed arrow in source window: Changed the - (dash) to an ACS_LTEE
    character.  If this causes problems on some systems, I'll remove it.
    * Changed GDB window tabs: Modified the GDB output window's tab 