@@ -13,7 +13,6 @@ extern "C" {
 
 #include "types.h"
 #include "terminal.h"
-#include "macro.h"
 
 /* tgdb_init: Allows libtgdb to configure itself.
  * Returns: 0 on success or -1 on error.
